[package]
name = "mserver"
version = "0.1.0"
authors = ["odde <jaja@DESKTOP-PTLMHO2>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[dependencies]
simple_excel_writer = "0.1.5"