[package]
name = "Tilt mouse"
version = "0.1.0"
authors = ["oqqA"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[dependencies]
simple_excel_writer = "0.1.5"